DP-3825 - correcting spacing between lists in sidebar

--- a/styleguide/source/assets/scss/01-atoms/_sidebar-heading.scss
+++ b/styleguide/source/assets/scss/01-atoms/_sidebar-heading.scss
@@ -2,6 +2,7 @@
   border-bottom: 2px solid;
   font-size: 1.188rem;
   letter-spacing: .09em;
+  padding-top: .75em;
   padding-bottom: .5em;
   text-transform: uppercase;
 }
