--- a/styleguide/source/assets/scss/02-molecules/_press-teaser.scss
+++ b/styleguide/source/assets/scss/02-molecules/_press-teaser.scss
@@ -13,8 +13,8 @@
 
     @media ($bp-large-min){
       .sidebar & {
-        margin-top: 25px;
-        padding-top: 25px;
+        margin-top: 20px;
+        padding-top: 20px;
       }
     }
   }
